- Only fail to open the stream if we can't parse the possible option, not   if we can't change it. Fix GNOME bug #334666:   http://bugzilla.gnome.org/show_bug.cgi?id=334666   trying to open:   mms://media.fastweb.it/WM9/raiclick/FMVRAI04000000001441.wmv?idCnt=368&path=RaiClickWeb^Spettacolo^Jazz#1

CVS patchset: 7935
CVS date: 2006/03/17 18:52:04